--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Zachary Jacob Collins</title>
+		<link rel="shortcut icon"	 href="images/favicon.ico"	 type="image/x-icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -27,7 +28,8 @@
 							<h1>Zachary Jacob Collins</h1>
 							<p>Computer Scientist</p>
 						</header>
-						<!--
+
+						<!-- ExtraContent
 						<hr />
 						<h2>Extra Stuff!</h2>
 						<form method="post" action="#">
@@ -63,21 +65,24 @@
 							</ul>
 						</form>
 						<hr />
-						-->
+						ExtraContent -->
+						
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://github.com/ZacharyJacobCollins" class="fa-github">Github</a></li>
+								<li><a href="http://zacc.xyz/resume/Resume%20.pdf" class="fa-file">Resume</a></li>
 								<li><a href="#" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
 
+
+
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Zachary Jacob Collins</li>
-							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Zachary Jacob Collins</li>
+							<li>&copy; 2016</li>
 						</ul>
 					</footer>
 
