--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Zachary Jacob Collins</h1>
-							<p>Computer Scientist</p>
 						</header>
 
 						<!-- ExtraContent
@@ -66,17 +65,15 @@
 						</form>
 						<hr />
 						ExtraContent -->
-						
+
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/ZacharyJacobCollins" class="fa-github">Github</a></li>
 								<li><a href="http://zacc.xyz/resume/Resume%20.pdf" class="fa-file">Resume</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="./html/projects.html" class="fa-folder">Projects</a></li>
 							</ul>
 						</footer>
 					</section>
-
-
 
 				<!-- Footer -->
 					<footer id="footer">
@@ -96,6 +93,5 @@
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 				}
 			</script>
-
 	</body>
 </html>
